<resources>
    <string name="app_name">GarajeUIO</string>
    <string name="lbCodigo">Codigo</string>
    <string name="lbNombre">Nombre</string>
    <string name="lbDireccion">Direccion</string>
    <string name="lbTelefono">Telefono</string>
    <string name="lbIdentificacion">Identificacion</string>
    <string name="lbEmail">Email</string>
    <string name="rCedula">Cedula</string>
    <string name="rRuc">Ruc</string>
    <string name="rPasaporte">Pasaporte</string>
    <string name="btConsultar">Consultar</string>
    <string name="btGrabar">Grabar</string>
    <string name="btLimpia">Limpiar</string>
    <string name="btActualizar">Actualizar</string>
    <string name="btEliminar">Eliminar</string>
    <string name="btFactura">Factura</string>
    <string name="usuario">Usuario:</string>
    <string name="passwd">Clave:</string>
    <string name="btnlogin">Login</string>
    <string name="btnMenu">Menu</string>
    <string-array name="lista_clientes">
        <item>Consumidor Final</item>
        <item>Factura con datos</item>
    </string-array>
    <string name="lblFactura">FACTURA</string>
    <string name="lblCliente">CLIENTE</string>
    <string name="lblPlaca">PLACA</string>
    <string name="lblFecha">FECHA</string>
    <string name="lblIngreso">INGRESO</string>
    <string name="lblSalida">SALIDA</string>
    <string name="lblCantidad">CANTIDAD</string>
    <string name="lblPvp">PVP</string>
    <string name="lblSubTotal">SUB TOTAL</string>
    <string name="lblIva">I.V.A.</string>
    <string name="lblTotal">TOTAL</string>
    <string name="lblBuscar">Buscar</string>
    <string name="lblCancelar">Cancelar</string>
    <string name="lblCaptura">Capturar</string>
    <string name="lblCapturaPlaca">Imagen de Placa</string>
    <string name="lblTiempo">Tiempo</string>
    <string name="lblFacturar">Facturar</string>
    <string name="lblSalir">Salir</string>
    <string name="lblGuardar">Guardar</string>
    <string name="lblLogo">Logo</string>
</resources>
