<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Reporte">

    <ImageView
            android:id="@+id/imageView6"
            android:layout_width="324dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="18dp"/>

    <TextView
            android:id="@+id/tvFactura"
            android:layout_width="163dp"
            android:layout_height="29dp"
            android:text="@string/lblFactura"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="124dp"
            tools:layout_editor_absoluteX="18dp"/>

    <TextView
            android:id="@+id/txtFechaSistema"
            android:layout_width="162dp"
            android:layout_height="30dp"
            tools:layout_editor_absoluteY="211dp"
            tools:layout_editor_absoluteX="179dp"/>

    <TextView
            android:id="@+id/txtCliente"
            android:layout_width="162dp"
            android:layout_height="30dp"
            tools:layout_editor_absoluteY="153dp"
            tools:layout_editor_absoluteX="180dp"/>

    <TextView
            android:id="@+id/lblFecha"
            android:layout_width="163dp"
            android:layout_height="29dp"
            android:text="@string/lblFecha"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="211dp"
            tools:layout_editor_absoluteX="16dp"/>

    <TextView
            android:id="@+id/txtPlaca"
            android:layout_width="162dp"
            android:layout_height="30dp"
            tools:layout_editor_absoluteY="182dp"
            tools:layout_editor_absoluteX="179dp"/>

    <TextView
            android:id="@+id/lblPlaca"
            android:layout_width="162dp"
            android:layout_height="29dp"
            android:text="@string/lblPlaca"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="182dp"
            tools:layout_editor_absoluteX="16dp"/>

    <TextView
            android:id="@+id/lblCliente"
            android:layout_width="163dp"
            android:layout_height="29dp"
            android:text="@string/lblCliente"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="153dp"
            tools:layout_editor_absoluteX="16dp"/>

    <TextView
            android:id="@+id/txtFactura"
            android:layout_width="162dp"
            android:layout_height="29dp"
            tools:layout_editor_absoluteY="124dp"
            tools:layout_editor_absoluteX="180dp"/>

    <TextView
            android:id="@+id/lblIngreso"
            android:layout_width="163dp"
            android:layout_height="29dp"
            android:text="@string/lblIngreso"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="270dp"
            tools:layout_editor_absoluteX="16dp"/>

    <TextView
            android:id="@+id/lblSalida"
            android:layout_width="163dp"
            android:layout_height="29dp"
            android:text="@string/lblSalida"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="299dp"
            tools:layout_editor_absoluteX="16dp"/>

    <TextView
            android:id="@+id/txtFechaSalida"
            android:layout_width="163dp"
            android:layout_height="28dp"
            tools:layout_editor_absoluteY="300dp"
            tools:layout_editor_absoluteX="180dp"/>

    <TextView
            android:id="@+id/txtFechaIngreso"
            android:layout_width="163dp"
            android:layout_height="30dp"
            tools:layout_editor_absoluteY="270dp"
            tools:layout_editor_absoluteX="179dp"/>

    <TextView
            android:id="@+id/lblCantidad"
            android:layout_width="109dp"
            android:layout_height="29dp"
            android:gravity="center"
            android:text="@string/lblCantidad"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="375dp"
            tools:layout_editor_absoluteX="18dp"/>

    <TextView
            android:id="@+id/lblPvp"
            android:layout_width="109dp"
            android:layout_height="29dp"
            android:gravity="center"
            android:text="@string/lblPvp"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="375dp"
            tools:layout_editor_absoluteX="127dp"/>

    <TextView
            android:id="@+id/lblSubTotal"
            android:layout_width="109dp"
            android:layout_height="29dp"
            android:gravity="center"
            android:text="@string/lblSubTotal"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="375dp"
            tools:layout_editor_absoluteX="236dp"/>

    <TextView
            android:id="@+id/txtCantidad"
            android:layout_width="109dp"
            android:layout_height="29dp"
            android:gravity="center"
            tools:layout_editor_absoluteY="405dp"
            tools:layout_editor_absoluteX="17dp"/>

    <TextView
            android:id="@+id/txtPvp"
            android:layout_width="109dp"
            android:layout_height="29dp"
            android:gravity="right"
            tools:layout_editor_absoluteY="405dp"
            tools:layout_editor_absoluteX="127dp"/>

    <TextView
            android:id="@+id/txtSubTotal"
            android:layout_width="109dp"
            android:layout_height="30dp"
            android:gravity="right"
            tools:layout_editor_absoluteY="404dp"
            tools:layout_editor_absoluteX="236dp"/>

    <TextView
            android:id="@+id/lblIva"
            android:layout_width="105dp"
            android:layout_height="29dp"
            android:gravity="center|center_vertical"
            android:text="@string/lblIva"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="460dp"
            tools:layout_editor_absoluteX="129dp"/>

    <TextView
            android:id="@+id/txtTotal"
            android:layout_width="105dp"
            android:layout_height="29dp"
            tools:layout_editor_absoluteY="489dp"
            tools:layout_editor_absoluteX="236dp"/>

    <TextView
            android:id="@+id/lblTotal"
            android:layout_width="106dp"
            android:layout_height="29dp"
            android:gravity="center"
            android:text="@string/lblTotal"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="489dp"
            tools:layout_editor_absoluteX="129dp"/>

    <TextView
            android:id="@+id/txtIva"
            android:layout_width="106dp"
            android:layout_height="29dp"
            android:gravity="right"
            tools:layout_editor_absoluteY="460dp"
            tools:layout_editor_absoluteX="235dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="20dp"
            android:orientation="horizontal"/>

</androidx.constraintlayout.widget.ConstraintLayout>