<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="30dp"
    android:paddingRight="16dp"
    tools:context=".login">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="79dp"
        android:layout_marginTop="27dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_marginTop="21dp"
        android:text="@string/usuario" />

    <EditText
        android:id="@+id/txtso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtso"
        android:layout_marginTop="27dp"
        android:text="@string/passwd" />

    <EditText
        android:id="@+id/txtPasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtso"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="349dp"
        android:layout_height="43dp"
        android:layout_below="@id/txtPasswd"
        android:layout_marginTop="53dp"
        android:gravity="center"
        android:onClick="verificar"
        android:text="@string/btnlogin" />

</RelativeLayout>